--- a/Jsbeautifier/Jsbeautifier.csproj
+++ b/Jsbeautifier/Jsbeautifier.csproj
@@ -4,4 +4,15 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
+  <PropertyGroup>
+    <Version>0.0.1</Version>
+    <Authors>Denis Ivanov</Authors>
+    <PackageId>Jsbeautifier</PackageId>
+    <AssemblyVersion>0.0.1</AssemblyVersion>
+    <FileVersion>0.0.1</FileVersion>
+    <Description>JavaScript beautifier</Description>
+    <PackageProjectUrl>https://github.com/denis-ivanov/Jsbeautifier</PackageProjectUrl>
+    <PackageTags>JavaScript; Beautifier</PackageTags>
+  </PropertyGroup>
+  
 </Project>
